final code and readme

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
+  background-color: rgb(255, 207, 215);
 }
 
 .wrapper {
@@ -28,6 +28,7 @@ header {
   padding: 20px;
   padding-top: 0px;
   color: hsl(206, 17%, 28%);
+  font-size:35px;
 }
 
 .card {
@@ -74,11 +75,11 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: rgb(255, 207, 215);
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
-  color: hsl(0, 0%, 100%);
+  color: hsl(0, 100%, 0%);
   display: inline-block;
   font-size: 22px;
   line-height: 22px;
@@ -112,7 +113,7 @@ button[disabled] {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
+  border: 2px dashed rgb(255, 207, 215);
   border-radius: 6px;
   resize: none;
   overflow: hidden;
